--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,20 @@
         android:theme="@style/Theme.Charityyyyy"
         tools:targetApi="31">
         <activity
-            android:name=".registerPage"
+            android:name=".loginPage"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".homePage"
+            android:label="Event List"
             android:exported="false" />
         <activity
-            android:name=".loginPage"
+            android:name=".registerPage"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
